# OpenDMS

./: .gitattributes  .gitignore  .pylintrc  MANIFEST.in  README.md  README.rst  setup.cfg
.github/workflows/: lint.yml  test.yml
opendms/: cli.py  facedetector.py
src/opendms/: __init__.py  __main__.py  cli.py  facedetector.py  facefilter.py  facelandmarksdetector.py  utils.py
tests/: test_facedetector.py
