[metadata]
name = opendms
version = 0.1.0
description = Simple open source driver monitoring system
long_description = file: README.rst
license = Apache License 2.0
url = https://github.com/cledouarec/OpenDMS
keywords = dms automotive
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    opencv-python

[options.extras_require]
dev =
    pre-commit
    pytest

[options.entry_points]
console_scripts =
    opendms = opendms.cli:main

[aliases]
test=pytest

[flake8]
ignore = W503
max-line-length = 79
# max-complexity = 18
select = B,C,E,F,W,T4,B9
